--- a/PokeMMO AutoBattler/requirements.txt
+++ b/PokeMMO AutoBattler/requirements.txt
@@ -1,8 +1,13 @@
+autopep8==1.5.7
 MouseInfo==0.1.3
 PyAutoGUI==0.9.53
+pycodestyle==2.7.0
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
+pynput==1.7.3
 pyperclip==1.8.2
 PyRect==0.1.4
 PyScreeze==0.1.27
 PyTweening==1.0.3
+six==1.16.0
+toml==0.10.2
