--- a/PokeMMO AutoBattler/requirements.txt
+++ b/PokeMMO AutoBattler/requirements.txt
@@ -2,6 +2,7 @@ autopep8==1.5.7
 MouseInfo==0.1.3
 PyAutoGUI==0.9.53
 pycodestyle==2.7.0
+PyDirectInput==1.0.4
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
 pynput==1.7.3
