--- a/PokeMMO AutoBattler/requirements.txt
+++ b/PokeMMO AutoBattler/requirements.txt
@@ -1,5 +1,9 @@
 autopep8==1.5.7
+colorama==0.4.4
 MouseInfo==0.1.3
+numpy==1.21.2
+opencv-python==4.5.3.56
+Pillow==8.3.1
 PyAutoGUI==0.9.53
 pycodestyle==2.7.0
 PyDirectInput==1.0.4
